nexus/nexus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
        - env: []
          name: nexus
          image: klo2k/nexus3:latest
          resources:
            limits:
              memory: "4Gi"
              cpu: "2000m"
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8081
            - containerPort: 5000
          volumeMounts:
            - name: nexus-storage
              mountPath: /var/lib/nexus
              readOnly: false
      nodeSelector:
        node-type: worker
      volumes:
        - name: nexus-storage
          persistentVolumeClaim:
            claimName: nexus-pvc
