nexus/nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: nexus
spec:
  selector: 
    app: nexus
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: http
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: docker
