nexus/nexus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus
  namespace: nexus
  annotations:
    kubernetes.io/ingress.class: traefik
status:
  loadBalancer:
    ingress:
      - ip: 10.0.1.200
      - ip: 10.0.1.201
      - ip: 10.0.1.202
      - ip: 10.0.1.203
spec:
  rules:
    - host: nexus.kube
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service: 
                name: nexus-service
                port:
                  number: 80
    - host: docker.kube
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: nexus-service
                port: 
                  number: 5000
